Fix bug in login functionality

--- a/python-portfolio-project-starter-files/us-medical-insurance-costs.ipynb
+++ b/python-portfolio-project-starter-files/us-medical-insurance-costs.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
        " ...]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1388,6 +1388,174 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The smoker mean charges are 32050.23.\n",
+      "The smoker median charges are 34456.35.\n",
+      "The smoker mode charges are 16884.92.\n",
+      "The non-smoker mean charges are 8434.27.\n",
+      "The non-smoker median charges are 7345.41.\n",
+      "The non-smoker mode charges are 1639.56.\n",
+      "Mean difference: 23615.96\n",
+      "Median difference: 27110.94\n",
+      "Mode difference: 15245.36\n",
+      "Smoker variance: 133207311.21\n",
+      "Non-smoker variance: 35925420.5\n",
+      "Smoker standard deviation: 11541.55\n",
+      "Non-smoker standard deviation: 5993.78\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'DescriptiveStats' object has no attribute 'ttest_ind'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[76], line 127\u001b[0m\n\u001b[0;32m    122\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalculate_regression(smoker_charges, non_smoker_charges)\n\u001b[0;32m    125\u001b[0m smoking_analysis \u001b[38;5;241m=\u001b[39m SmokingAnalysis(age, sex, bmi, children, smoker, region, charges)\n\u001b[1;32m--> 127\u001b[0m \u001b[43msmoking_analysis\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mperform_all_calculations\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[76], line 117\u001b[0m, in \u001b[0;36mSmokingAnalysis.perform_all_calculations\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    115\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalculate_variance(smoker_charges, non_smoker_charges)\n\u001b[0;32m    116\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalculate_standard_deviation(smoker_charges, non_smoker_charges)\n\u001b[1;32m--> 117\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcalculate_t_test\u001b[49m\u001b[43m(\u001b[49m\u001b[43msmoker_charges\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnon_smoker_charges\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    118\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalculate_p_value(smoker_charges, non_smoker_charges)\n\u001b[0;32m    119\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcalculate_confidence_interval(smoker_charges, non_smoker_charges)\n",
+      "Cell \u001b[1;32mIn[76], line 78\u001b[0m, in \u001b[0;36mSmokingAnalysis.calculate_t_test\u001b[1;34m(self, smoker_charges, non_smoker_charges)\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcalculate_t_test\u001b[39m(\u001b[38;5;28mself\u001b[39m, smoker_charges, non_smoker_charges):\n\u001b[1;32m---> 78\u001b[0m     t_test \u001b[38;5;241m=\u001b[39m \u001b[43mstats\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mttest_ind\u001b[49m(smoker_charges, non_smoker_charges)\n\u001b[0;32m     79\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT-test: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mt_test\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DescriptiveStats' object has no attribute 'ttest_ind'"
+     ]
+    }
+   ],
+   "source": [
+    "class SmokingAnalysis:\n",
+    "    def __init__(self, age, sex, bmi, children, smoker, region, charges):\n",
+    "        # Initialize the attributes from the parameters\n",
+    "        self.age = age\n",
+    "        self.sex = sex\n",
+    "        self.bmi = bmi\n",
+    "        self.children = children\n",
+    "        self.smoker = smoker\n",
+    "        self.region = region\n",
+    "        self.charges = charges\n",
+    "        # Create an instance of PatientInfo using the provided attributes\n",
+    "        patient_info = PatientInfo(age, sex, bmi, children, smoker, region, charges) \n",
+    "        # Call the create_dictionary() method from the PatientInfo instance\n",
+    "        # and store the result in an attribute of SmokingAnalysis\n",
+    "        self.patients_dictionary = patient_info.create_dictionary()\n",
+    "          \n",
+    "    # Reference the self.patients_dictionary and create two new lists of the full dictionary items.   \n",
+    "    def create_smokers_lists(self):  \n",
+    "        smokers = []\n",
+    "        non_smokers = []\n",
+    "\n",
+    "        for i in range(len(self.patients_dictionary['smoker'])):\n",
+    "            patient = {key: self.patients_dictionary[key][i] for key in self.patients_dictionary}\n",
+    "            if patient['smoker'] == 'yes':\n",
+    "                smokers.append(patient)\n",
+    "            else:\n",
+    "                non_smokers.append(patient)\n",
+    "        return smokers, non_smokers\n",
+    "\n",
+    "    # Calculate the mean, median, and mode of the charges for smokers and non-smokers\n",
+    "    def calculate_smoker_stats(self): \n",
+    "        smokers, non_smokers = self.create_smokers_lists()  # Define the variables \"smokers\" and \"non_smokers\"\n",
+    "        smoker_charges = [float(patient['charges']) for patient in smokers]\n",
+    "        smoker_mean = statistics.mean(smoker_charges)\n",
+    "        smoker_median = statistics.median(smoker_charges)\n",
+    "        smoker_mode = statistics.mode(smoker_charges)\n",
+    "\n",
+    "        non_smoker_charges = [float(patient['charges']) for patient in non_smokers]\n",
+    "        non_smoker_mean = statistics.mean(non_smoker_charges)\n",
+    "        non_smoker_median = statistics.median(non_smoker_charges)\n",
+    "        non_smoker_mode = statistics.mode(non_smoker_charges)\n",
+    "\n",
+    "        # Print the results\n",
+    "        print(\"The smoker mean charges are \" + str(round(smoker_mean, 2)) + \".\")\n",
+    "        print(\"The smoker median charges are \" + str(round(smoker_median, 2)) + \".\")\n",
+    "        print(\"The smoker mode charges are \" + str(round(smoker_mode, 2)) + \".\")\n",
+    "        print(\"The non-smoker mean charges are \" + str(round(non_smoker_mean, 2)) + \".\")\n",
+    "        print(\"The non-smoker median charges are \" + str(round(non_smoker_median, 2)) + \".\")\n",
+    "        print(\"The non-smoker mode charges are \" + str(round(non_smoker_mode, 2)) + \".\")\n",
+    "\n",
+    "        return smoker_mean, non_smoker_mean, smoker_median, non_smoker_median, smoker_mode, non_smoker_mode, smoker_charges, non_smoker_charges\n",
+    "    \n",
+    "    # Return the mean, median, and mode of the charges for smokers and non-smokers\n",
+    "    def calculate_difference(self, smoker_mean, non_smoker_mean, smoker_median, non_smoker_median, smoker_mode, non_smoker_mode):\n",
+    "        mean_diff = smoker_mean - non_smoker_mean\n",
+    "        median_diff = smoker_median - non_smoker_median\n",
+    "        mode_diff = smoker_mode - non_smoker_mode\n",
+    "        print(f\"Mean difference: {round(mean_diff, 2)}\")\n",
+    "        print(f\"Median difference: {round(median_diff, 2)}\")\n",
+    "        print(f\"Mode difference: {round(mode_diff, 2)}\")\n",
+    "\n",
+    "    # Calculate the variance of the charges for smokers and non-smokers\n",
+    "    def calculate_variance(self, smoker_charges, non_smoker_charges):\n",
+    "        smoker_variance = statistics.variance(smoker_charges)\n",
+    "        non_smoker_variance = statistics.variance(non_smoker_charges)\n",
+    "        print(f\"Smoker variance: {round(smoker_variance, 2)}\")\n",
+    "        print(f\"Non-smoker variance: {round(non_smoker_variance, 2)}\")\n",
+    "\n",
+    "    # Calculate the standard deviation of the charges for smokers and non-smokers\n",
+    "    def calculate_standard_deviation(self, smoker_charges, non_smoker_charges):\n",
+    "        smoker_std_dev = math.sqrt(statistics.variance(smoker_charges))\n",
+    "        non_smoker_std_dev = math.sqrt(statistics.variance(non_smoker_charges))\n",
+    "        print(f\"Smoker standard deviation: {round(smoker_std_dev, 2)}\")\n",
+    "        print(f\"Non-smoker standard deviation: {round(non_smoker_std_dev, 2)}\")\n",
+    "\n",
+    "    # Calculate the t-test for the charges of smokers and non-smokers    \n",
+    "    def calculate_t_test(self, smoker_charges, non_smoker_charges):\n",
+    "        t_test = stats.ttest_ind(smoker_charges, non_smoker_charges)\n",
+    "        print(f\"T-test: {t_test}\")\n",
+    "    \n",
+    "    # Calculate the p-value for the charges of smokers and non-smokers\n",
+    "    def calculate_p_value(self, smoker_charges, non_smoker_charges):\n",
+    "        t_test = stats.ttest_ind(smoker_charges, non_smoker_charges)\n",
+    "        p_value = t_test[1]\n",
+    "        print(f\"P-value: {p_value}\")\n",
+    "    \n",
+    "    # Calculate the confidence interval for the charges of smokers and non-smokers\n",
+    "    def calculate_confidence_interval(self, smoker_charges, non_smoker_charges):\n",
+    "        confidence_interval = stats.t.interval(0.95, len(smoker_charges)-1, loc=np.mean(smoker_charges), scale=stats.sem(smoker_charges))\n",
+    "        print(f\"Confidence interval for smokers: {confidence_interval}\")\n",
+    "        confidence_interval = stats.t.interval(0.95, len(non_smoker_charges)-1, loc=np.mean(non_smoker_charges), scale=stats.sem(non_smoker_charges))\n",
+    "        print(f\"Confidence interval for non-smokers: {confidence_interval}\")\n",
+    "    \n",
+    "    # Calculate the effect size for the charges of smokers and non-smokers\n",
+    "    def calculate_effect_size(self, smoker_charges, non_smoker_charges):\n",
+    "        effect_size = stats.ttest_ind(smoker_charges, non_smoker_charges)\n",
+    "        print(f\"Effect size: {effect_size}\")\n",
+    "    \n",
+    "    # Calculate the correlation between the charges of smokers and non-smokers\n",
+    "    def calculate_correlation(self, smoker_charges, non_smoker_charges):\n",
+    "        correlation = stats.pearsonr(smoker_charges, non_smoker_charges)\n",
+    "        print(f\"Correlation: {correlation}\")\n",
+    "    \n",
+    "    # Calculate the regression between the charges of smokers and non-smokers\n",
+    "    def calculate_regression(self, smoker_charges, non_smoker_charges):\n",
+    "        regression = stats.linregress(smoker_charges, non_smoker_charges)\n",
+    "        print(f\"Regression: {regression}\")\n",
+    "\n",
+    "    # Perform all the calculations\n",
+    "    def perform_all_calculations(self):\n",
+    "        (smoker_mean, non_smoker_mean, smoker_median, non_smoker_median, \n",
+    "         smoker_mode, non_smoker_mode, smoker_charges, non_smoker_charges) = self.calculate_smoker_stats()\n",
+    "\n",
+    "        self.calculate_difference(smoker_mean, non_smoker_mean, smoker_median, non_smoker_median, smoker_mode, non_smoker_mode)\n",
+    "        self.calculate_variance(smoker_charges, non_smoker_charges)\n",
+    "        self.calculate_standard_deviation(smoker_charges, non_smoker_charges)\n",
+    "        self.calculate_t_test(smoker_charges, non_smoker_charges)\n",
+    "        self.calculate_p_value(smoker_charges, non_smoker_charges)\n",
+    "        self.calculate_confidence_interval(smoker_charges, non_smoker_charges)\n",
+    "        self.calculate_effect_size(smoker_charges, non_smoker_charges)\n",
+    "        self.calculate_correlation(smoker_charges, non_smoker_charges)\n",
+    "        self.calculate_regression(smoker_charges, non_smoker_charges)\n",
+    "\n",
+    "\n",
+    "smoking_analysis = SmokingAnalysis(age, sex, bmi, children, smoker, region, charges)\n",
+    "\n",
+    "smoking_analysis.perform_all_calculations()"
+   ]
   },
   {
    "cell_type": "markdown",
